refactor: consolidate player state, improve item safety, and harden config parsing
- Replace dual Map<UUID, HoldState>/Map<UUID, Long> shootCooldown with a
  single PlayerState record per player, consolidating hold and cooldown
  timestamps and simplifying state transitions.
- Remove the dangling NONE sentinel from ClickSide; now only LEFT/RIGHT
  exist, matching the logical paths that were already taken.
- Builder: guard lore, enchantment, and tooltip sections so empty config
  lists/lore/enchantments do not cause needless allocations or NPEs.
- Builder: set the persistent data tag before the final meta write to
  eliminate the double getItemMeta/setItemMeta round-trip.
- Command: extract MiniMessage to a static constant; drop leftover items
  on the ground when the player’s inventory is full.
- Config: parse NamespacedKey via NamespacedKey.fromString() with
  exception handling instead of manual colon-splitting.
- Config: reject enchantment levels < 1 (zero/negative are invalid in
  modern Minecraft).
- Config: switch DataComponentType lookup from reflective field access to
  the DATA_COMPONENT_TYPE registry (future-proof, Paper-safe).
- Config: clamp beam-distance, beam-particles-per-meter and beam-ray-size
  to non-negative values to guard against invalid ray-trace inputs.
- Config: default click-actions fallback now uses all Action values
  (EnumSet.allOf) instead of a hard-coded set.
- Config: skip blank strings when parsing lists to avoid surprises with
  empty config lines.
- Event listener: rename HoldState/Map fields to cohesive state/holdMap
  naming and retain new PlayerState structure throughout.
- Event listener: add onDisable cleanup (cleanup() method) that clears
  all maps and registers a PlayerQuitEvent handler to remove state per
  player, preventing memory leaks.
- Salvation beam: simplify vector/travel calculations; use local
  dot-product loop instead of repeated originVec.distance(cursor).
- Overall: add onDisable lifecycle with cleanup and lo